# cookiecutter_fastAPI_v2

./: Dockerfile  README.md  docker-compose.env  docker-compose.yml  pyproject.toml
cookiecutter_fastAPI_v2/: config.py  const.py  main.py  worker.py
cookiecutter_fastAPI_v2/core/: rule.py
cookiecutter_fastAPI_v2/core/auth/: api_models.py  api_v1.py  api_v2.py  apv_v1.py  models.py  objects.py
cookiecutter_fastAPI_v2/core/base/: app.py  depends.py  exceptions.py  middleware.py  mixin.py  permission.py  router.py
cookiecutter_fastAPI_v2/core/index/: __init__.py
cookiecutter_fastAPI_v2/core/task/: __init__.py
cookiecutter_fastAPI_v2/migrations/models/: 0_20220624062053_init.sql  0_20220707005548_init.sql
cookiecutter_fastAPI_v2/utils/: __init__.py  arq.py  context.py  json.py  log.py  models.py  template.py
cookiecutter_fastAPI_v2/utils/cbv/: __init__.py  base.py  cbv.py  const.py  model.py  wrapper.py
cookiecutter_fastAPI_v2/worker/cron/: cron.py
cookiecutter_fastAPI_v2/worker/task/: task.py
